welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:6: error: not found: value outside
  } else if (outside && n>=10){
             ^